--- a/sidechainnet/research/analysis/220714 AMBER FF Validation of Hydrogen Placement.ipynb
+++ b/sidechainnet/research/analysis/220714 AMBER FF Validation of Hydrogen Placement.ipynb
@@ -5,9 +5,7 @@
    "execution_count": 1,
    "id": "a0dc726a",
    "metadata": {
-    "code_folding": [
-     16
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -320,12 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3b8cb1cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['N', 'CA', 'C'])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "bp2"
+    "bpo.build_params.keys()"
    ]
   },
   {
