Update method for standardizing non-std residues.

--- a/sidechainnet/research/Generating SidechainNet from ProteinNet 220617.ipynb
+++ b/sidechainnet/research/Generating SidechainNet from ProteinNet 220617.ipynb
@@ -206,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sidechainnetv2] *",
+   "display_name": "Python [conda env:sidechainnetv2]",
    "language": "python",
    "name": "conda-env-sidechainnetv2-py"
   },
