--- a/sidechainnet/research/openfold/230130 Generating Runtime Experiment Cmds.ipynb
+++ b/sidechainnet/research/openfold/230130 Generating Runtime Experiment Cmds.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,12 @@
     "--use_scn_pdb_names \\\n",
     "--write_pdbs \\\n",
     "--write_pdbs_every_n_steps=3 \\\n",
-    "--seed=0 \\\n",
     " --train_chain_data_cache_path=chain_data_cache.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,8 @@
     "        use_alignment_index,\n",
     "        wandb_notes,\n",
     "        suffix,\n",
-    "        verbose=False):\n",
+    "        verbose=False,\n",
+    "        seed=3):\n",
     "\n",
     "        cmd = self.base_cmd\n",
     "        if use_template_release_dates_cache:\n",
@@ -175,6 +175,8 @@
     "            cmd += f\" --wandb_notes=\\\"{wandb_notes}\\\"\"\n",
     "        if suffix:\n",
     "            cmd += f\" --experiment=speed-test-{self.cur_experiment:02d}-{suffix}\"\n",
+    "        if seed:\n",
+    "            cmd += f\" --seed={seed}\"\n",
     "        \n",
     "        self.cur_experiment += 1\n",
     "        self.cmds.append(cmd)\n",
@@ -200,11 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CG = CommandGenerator(base_cmd)\n",
+    "CG = CommandGenerator(base_cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "CG.make_cmd(\n",
     "        use_template_release_dates_cache=False,\n",
     "        use_deepspeed_config=True,\n",
@@ -213,7 +224,8 @@
     "        precision=\"bf16\",\n",
     "        use_alignment_index=False,\n",
     "        wandb_notes=\"Baseline. No template cache, 1 worker, deepspeed:bf16, no alignment index, no benchmark\",\n",
-    "        suffix=\"baseline\")\n",
+    "        suffix=\"baseline\",\n",
+    "        seed=4)\n",
     "\n",
     "CG.make_cmd(\n",
     "        use_template_release_dates_cache=False,\n",
@@ -223,7 +235,8 @@
     "        precision=\"bf16\",\n",
     "        use_alignment_index=False,\n",
     "        wandb_notes=\"Baseline + 12 workers. No template cache, 12 workers, deepspeed:bf16, no alignment index, no benchmark\",\n",
-    "        suffix=\"12workers\")\n",
+    "        suffix=\"12workers\",\n",
+    "        seed=4)\n",
     "\n",
     "CG.make_cmd(\n",
     "        use_template_release_dates_cache=False,\n",
@@ -233,7 +246,8 @@
     "        precision=\"bf16\",\n",
     "        use_alignment_index=False,\n",
     "        wandb_notes=\"Baseline + 16 workers. No template cache, 16 workers, deepspeed:bf16, no alignment index, no benchmark\",\n",
-    "        suffix=\"16workers\")\n",
+    "        suffix=\"16workers\",\n",
+    "        seed=4)\n",
     "\n",
     "CG.make_cmd(\n",
     "        use_template_release_dates_cache=False,\n",
@@ -243,7 +257,8 @@
     "        precision=\"bf16\",\n",
     "        use_alignment_index=False,\n",
     "        wandb_notes=\"Baseline + 14 workers. No template cache, 14 workers, deepspeed:bf16, no alignment index, no benchmark\",\n",
-    "        suffix=\"8workers\")"
+    "        suffix=\"8workers\",\n",
+    "        seed=4)"
    ]
   },
   {
@@ -255,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +282,8 @@
     "    precision=\"bf16\",\n",
     "    use_alignment_index=False,\n",
     "    wandb_notes=\"Baseline + template cache. No template cache, 1 worker, deepspeed:bf16, no alignment index, no benchmark\",\n",
-    "    suffix=\"tempcache\")\n",
+    "    suffix=\"tempcache\",\n",
+    "    seed=4)\n",
     "\n",
     "CG.make_cmd(\n",
     "    use_template_release_dates_cache=False,\n",
@@ -277,7 +293,8 @@
     "    precision=\"bf16\",\n",
     "    use_alignment_index=False,\n",
     "    wandb_notes=\"Baseline + benchmark. No template cache, 1 worker, deepspeed:bf16, no alignment index, yes benchmark\",\n",
-    "    suffix=\"benchmark\")\n",
+    "    suffix=\"benchmark\",\n",
+    "    seed=4)\n",
     "\n",
     "CG.make_cmd(\n",
     "    use_template_release_dates_cache=False,\n",
@@ -287,7 +304,8 @@
     "    precision=\"bf16\",\n",
     "    use_alignment_index=True,\n",
     "    wandb_notes=\"Baseline + alignment index. No template cache, 1 worker, deepspeed:bf16, yes alignment index, no benchmark\",\n",
-    "    suffix=\"alnindex\")\n",
+    "    suffix=\"alnindex\",\n",
+    "    seed=4)\n",
     "\n",
     "CG.make_cmd(\n",
     "    use_template_release_dates_cache=True,\n",
@@ -297,16 +315,60 @@
     "    precision=\"bf16\",\n",
     "    use_alignment_index=True,\n",
     "    wandb_notes=\"Baseline + template cache + benchmark + alignment index. 1 worker, deepspeed:bf16\",\n",
-    "    suffix=\"tempcache+benchmark+alnindex\")"
+    "    suffix=\"tempcache+benchmark+alnindex\",\n",
+    "    seed=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CG.save_cmds(\"speed-test-commands-set02.sh\")"
+    "CG.make_cmd(\n",
+    "    use_template_release_dates_cache=True,\n",
+    "    use_deepspeed_config=True,\n",
+    "    use_benchmark=True,\n",
+    "    num_workers=12,\n",
+    "    precision=\"bf16\",\n",
+    "    use_alignment_index=True,\n",
+    "    wandb_notes=\"Baseline + template cache + benchmark + alignment index. 12 worker, deepspeed:bf16\",\n",
+    "    suffix=\"12worker+tempcache+benchmark+alnindex\")\n",
+    "CG.make_cmd(\n",
+    "    use_template_release_dates_cache=True,\n",
+    "    use_deepspeed_config=True,\n",
+    "    use_benchmark=True,\n",
+    "    num_workers=12,\n",
+    "    precision=\"16\",\n",
+    "    use_alignment_index=True,\n",
+    "    wandb_notes=\"Baseline + template cache + benchmark + alignment index. 12 worker, deepspeed:16\",\n",
+    "    suffix=\"12worker+tempcache+benchmark+alnindex+16precision\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CG.make_cmd(\n",
+    "    use_template_release_dates_cache=False,\n",
+    "    use_deepspeed_config=True,\n",
+    "    use_benchmark=True,\n",
+    "    num_workers=16,\n",
+    "    precision=\"bf16\",\n",
+    "    use_alignment_index=False,\n",
+    "    wandb_notes=\"Baseline + benchmark. 16 workers, deepspeed:bf16\",\n",
+    "    suffix=\"baseline+16worker+benchmark\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CG.save_cmds(\"speed-test-commands-set04.sh\")"
    ]
   },
   {
@@ -315,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod +x speed-test-commands-set02.sh"
+    "!chmod +x speed-test-commands-set04.sh"
    ]
   },
   {
