Research. MMCIF support for SCNProtein.

--- a/sidechainnet/research/evaluate_energy/analyze_evaluation.ipynb
+++ b/sidechainnet/research/evaluate_energy/analyze_evaluation.ipynb
@@ -567,14 +567,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:sidechainnetv2] *",
+   "display_name": "sidechainnetv2",
    "language": "python",
-   "name": "conda-env-sidechainnetv2-py"
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c9d7dfcb4e83d2a52f0c3bf985599fb6573ebb79d4763515fc88ba22b2df0694"
+    "hash": "2ea65d684a20c904dd0ce196a8938c08205850e9bd6d966931389d7cee446e27"
    }
   }
  },
